--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <meta charset="utf-8">
   <title>vue-test-task</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
   <div id="app"></div>
+
   <script src="/dist/build.js"></script>
 </body>
 
